# speedtest-tracker

./: .env.rust  .gitignore  API_RUST.md  BUILD_SUMMARY.md  Cargo.toml  DATABASE_FEATURES.md  DEPLOYMENT.md  MIGRATION_GUIDE.md  PHASE1_TEST_RESULTS.md  PORT_TESTS.md  README_RUST.md  RUST_PORT_STATUS.md  RUST_README.md  STYLING_COMPARISON.md  build-armv7.sh  build.rs  compose.yaml  composer.json  create-user.sh  flake.nix  package-lock.json  package.json  phpunit.xml  test-login.md  test_auth.md
.cursor/skills/saloon-development/: SKILL.md
.github/: renovate.json
.github/workflows/: cd.yml  ci.yml
app/Actions/: GetExternalIpAddress.php  GetOoklaSpeedtestServers.php
app/Actions/Notifications/: SendWebhookTestNotification.php
app/Actions/Webhooks/: BuildWebhookPayload.php
app/Enums/: WebhookEvent.php
app/Filament/Pages/Settings/: Notification.php
app/Filament/Resources/Results/Tables/: ResultTable.php
app/Filament/Resources/Webhooks/: WebhookResource.php
app/Filament/Resources/Webhooks/Schemas/: WebhookForm.php
app/Filament/Resources/Webhooks/Tables/: WebhookTable.php
app/Jobs/: CheckForInternetConnectionJob.php
app/Listeners/: DispatchWebhooks.php  NotifyWebhookTestResult.php  ProcessCompletedSpeedtest.php  ProcessSpeedtestDataIntegrations.php  ProcessUnhealthySpeedtest.php
app/Models/: Webhook.php
app/Notifications/: AppriseChannel.php
app/Providers/: AppServiceProvider.php
app/Services/: PrometheusMetricsService.php
app/Services/GitHub/: Repository.php
app/Settings/: NotificationSettings.php
config/: speedtest.php
database/factories/: WebhookFactory.php
database/migrations/: 2026_05_29_000001_create_webhooks_table.php  2026_05_29_000002_migrate_webhook_settings_to_table.php
docker/8.4/: Dockerfile
lang/en/: enums.php  webhooks.php
lang/en/settings/: notifications.php
locales/: api_tokens.yml  dashboard.yml  general.yml  results.yml  settings.yml  settings_thresholds.yml  tools.yml
migrations/: 20240101000001_create_users_table.sql  20240101000002_create_results_table.sql  20240101000003_create_personal_access_tokens_table.sql  20240101000004_create_schedules_table.sql  20241123021744_benchmarks_to_results.sql  20250731000001_add_bytes_to_results_table.sql  20250731225208_healthy_to_results.sql  20251124151719_add_dispatched_by_to_results.sql
public/css/: rust-app.css
resources/css/rust/: app.css
resources/views/filament/pages/: dashboard.blade.php
src/: api.rs  auth.rs  db.rs  embedded_assets.rs  error.rs  filters.rs  handlers.rs  i18n.rs  lib.rs  locale_middleware.rs  main.rs  models.rs  scheduler.rs  session.rs  speedtest.rs
src/handlers/: auth.rs  dashboard.rs  dashboard_admin.rs  language.rs  mod.rs  profile.rs  results.rs  schedules.rs  speedtest.rs  tokens.rs
templates/: README.md  admin.html  api-tokens.html  base.html  dashboard.html  login.html  profile.html  results.html  run-test.html
templates/components/: stat-card.html
templates/pages/: admin.html  api-tokens.html  dashboard.html  edit-token.html  profile.html  results.html  run-test.html  schedules.html
tests/: api_tests.rs  cache_headers_test.rs  embedded_assets_test.rs  status_translation_test.rs
tests/Feature/: MetricsEndpointTest.php
tests/Feature/Actions/: VacuumDatabaseTest.php
tests/Feature/Webhooks/: DispatchWebhooksTest.php  MigrateWebhookSettingsTest.php  NotifyWebhookTestResultTest.php  WebhookResourceTest.php
tests/Unit/: WebhookTest.php
