[package]
name = "speedtest-admin"
version = "0.1.0"
edition = "2021"
default-run = "speedtest-admin"

[[bin]]
name = "speedtest-admin"
path = "src/main.rs"

[[bin]]
name = "create-test-user"
path = "src/bin/create-test-user.rs"
required-features = ["sqlite"]

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite", "tower-sessions-sqlx-store/sqlite"]
mysql = ["sqlx/mysql", "tower-sessions-sqlx-store/mysql"]
postgres = ["sqlx/postgres", "tower-sessions-sqlx-store/postgres"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie", "cookie-private"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.8", default-features = false, features = ["any", "runtime-tokio-rustls", "chrono", "derive", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
time = "0.3"
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", default-features = false }
async-trait = "0.1"
tokio-cron-scheduler = "0.13"
cron = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-i18n = "3"
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
httpdate = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "de_DE", "es_ES", "fr_FR", "nl_NL", "pt_BR"]

# The default locale, default: "en".
# default-locale = "en"
